--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,16 @@
             <artifactId>commons-configuration2</artifactId>
             <version>2.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.ibm</groupId>
+            <artifactId>lapapp</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
